--- a/vignettes/tidyterra.Rmd
+++ b/vignettes/tidyterra.Rmd
@@ -43,12 +43,21 @@ slots of information(i.e., `terra::ncell(a_rast) * terra::nlyr(a_rast) < 10e6`).
 
 ## Get started with {tidyterra}
 
-First thing you'll notice when loading {tidyterra} is that a set of packages
-would be also attached.
+Load {tidyterra} with additional libraries of the {tidyverse}:
 
 
 ```r
 library(tidyterra)
+library(dplyr)
+#> 
+#> Attaching package: 'dplyr'
+#> The following objects are masked from 'package:stats':
+#> 
+#>     filter, lag
+#> The following objects are masked from 'package:base':
+#> 
+#>     intersect, setdiff, setequal, union
+library(tidyr)
 ```
 
 Currently, the following methods are available:
