--- a/vignettes/tidyterra.Rmd
+++ b/vignettes/tidyterra.Rmd
@@ -62,19 +62,20 @@ library(tidyr)
 
 Currently, the following methods are available:
 
-| tidyverse method      | SpatVector | SpatRaster      |
-|-----------------------|------------|-----------------|
-| `tibble::as_tibble()` | ✔️         | ✔️              |
-| `dplyr::filter()`     | ✔️         | ✔️              |
-| `dplyr::mutate()`     | ✔️         | ✔️              |
-| `dplyr::pull()`       | ✔️         | ✔️              |
-| `dplyr::relocate()`   | ✔️         | ✔️              |
-| `dplyr::rename()`     | ✔️         | ✔️              |
-| `dplyr::select()`     | ✔️         | ✔️              |
-| `dplyr::slice()`      | ✔️         | ✔️              |
-| `dplyr::transmute()`  | ✔️         | ✔️              |
-| `tidyr::drop_na()`    | ✔️         | ✔️ (questioned) |
-| `tidyr::replace_na()` | ✔️         | ✔️              |
+| tidyverse method      | SpatVector                         | SpatRaster      |
+|-----------------------|------------------------------------|-----------------|
+| `tibble::as_tibble()` | ✔️                                 | ✔️              |
+| `dplyr::filter()`     | ✔️                                 | ✔️              |
+| `dplyr::mutate()`     | ✔️                                 | ✔️              |
+| `dplyr::pull()`       | ✔️                                 | ✔️              |
+| `dplyr::relocate()`   | ✔️                                 | ✔️              |
+| `dplyr::rename()`     | ✔️                                 | ✔️              |
+| `dplyr::select()`     | ✔️                                 | ✔️              |
+| `dplyr::slice()`      | ✔️                                 | ✔️              |
+| `dplyr::transmute()`  | ✔️                                 | ✔️              |
+| `tidyr::drop_na()`    | ✔️                                 | ✔️ (questioned) |
+| `tidyr::replace_na()` | ✔️                                 | ✔️              |
+| `ggplot2::fortify()`  | ✔️ to **sf** with `sf::st_as_sf()` |                 |
 
 Let's see some of them in action:
 
@@ -209,9 +210,9 @@ f_rgb <- system.file("extdata/cyl_tile.tif", package = "tidyterra")
 
 r_rgb <- rast(f_rgb)
 
-rgb_plot <- ggplot() +
+rgb_plot <- ggplot(v) +
   geom_spatraster_rgb(data = r_rgb) +
-  geom_spatvector(data = v, fill = NA, size = 1)
+  geom_spatvector(fill = NA, size = 1)
 
 rgb_plot
 ```
@@ -277,14 +278,11 @@ ggplot() +
 ```r
 lux <- system.file("ex/lux.shp", package = "terra")
 
-spatvector <- terra::vect(lux)
+v_lux <- terra::vect(lux)
 
-ggplot() +
-  geom_spatvector(data = spatvector, aes(fill = POP)) +
-  geom_spatvector_text(
-    data = spatvector, aes(label = NAME_2),
-    color = "grey90"
-  ) +
+ggplot(v_lux) +
+  geom_spatvector(aes(fill = POP)) +
+  geom_spatvector_text(aes(label = NAME_2), color = "grey90") +
   scale_fill_binned(labels = scales::number_format()) +
   coord_sf(crs = 3857)
 ```
@@ -308,23 +306,11 @@ convert easily between the two packages like this:
 
 
 ```r
-lux <- system.file("ex/lux.shp", package = "terra")
+lux <- system.file("ex/lux.shp", package = "terra") %>%
+  terra::vect()
 
-spatvector <- terra::vect(lux)
-spatvector
-#>  class       : SpatVector 
-#>  geometry    : polygons 
-#>  dimensions  : 12, 6  (geometries, attributes)
-#>  extent      : 5.74414, 6.528252, 49.44781, 50.18162  (xmin, xmax, ymin, ymax)
-#>  source      : lux.shp
-#>  coord. ref. : lon/lat WGS 84 (EPSG:4326) 
-#>  names       :  ID_1   NAME_1  ID_2   NAME_2  AREA   POP
-#>  type        : <num>    <chr> <num>    <chr> <num> <int>
-#>  values      :     1 Diekirch     1 Clervaux   312 18081
-#>                    1 Diekirch     2 Diekirch   218 32543
-#>                    1 Diekirch     3  Redange   259 18664
 
-terra::plot(spatvector, main = "SpatVector", axes = TRUE)
+terra::plot(lux, main = "SpatVector", axes = TRUE)
 ```
 
 <img src="./terra_sf-1.png" alt="plot of chunk terra_sf" width="100%" />
@@ -333,7 +319,7 @@ terra::plot(spatvector, main = "SpatVector", axes = TRUE)
 
 
 # To sf
-sfobj <- sf::st_as_sf(spatvector)
+sfobj <- sf::st_as_sf(lux)
 head(sfobj, 3)
 #> Simple feature collection with 3 features and 6 fields
 #> Geometry type: POLYGON
@@ -354,9 +340,9 @@ plot(sfobj$geometry, main = "sf", axes = TRUE)
 
 # Back to terra
 
-spatvector2 <- terra::vect(sfobj)
+lux2 <- terra::vect(sfobj)
 
-spatvector2
+lux2
 #>  class       : SpatVector 
 #>  geometry    : polygons 
 #>  dimensions  : 12, 6  (geometries, attributes)
@@ -380,7 +366,7 @@ library(dplyr)
 library(terra)
 library(sf)
 
-spat_summ <- spatvector2 %>%
+lux_summ <- lux2 %>%
   # to sf
   st_as_sf() %>%
   # dplyr
@@ -389,7 +375,7 @@ spat_summ <- spatvector2 %>%
   # back to terra
   vect()
 
-spat_summ
+lux_summ
 #>  class       : SpatVector 
 #>  geometry    : polygons 
 #>  dimensions  : 3, 2  (geometries, attributes)
@@ -401,7 +387,7 @@ spat_summ
 #>                    2  71093
 #>                    3 439726
 
-terra::plot(spat_summ, "TOTPOP")
+terra::plot(lux_summ, "TOTPOP")
 ```
 
 <img src="./full_spatvector-1.png" alt="plot of chunk full_spatvector" width="100%" />
