--- a/README.Rmd
+++ b/README.Rmd
@@ -72,7 +72,7 @@ example, `as_tibble()` would return a tibble).
 Current methods and functions provided by {tidyterra} are:
 
 | tidyverse method      | SpatVector                             | SpatRaster                                                                                                     |
-|-----------------------|----------------------------------------|----------------------------------------------------------------------------------------------------------------|
+|-----------------|-----------------|-----------------------------------------------|
 | `tibble::as_tibble()` | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
 | `dplyr::select()`     | :heavy_check_mark:                     | :heavy_check_mark: Select layers                                                                               |
 | `dplyr::mutate()`     | :heavy_check_mark:                     | :heavy_check_mark: Create /modify layers                                                                       |
@@ -84,6 +84,7 @@ Current methods and functions provided by {tidyterra} are:
 | `dplyr::relocate()`   | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
 | `tidyr::drop_na()`    | :heavy_check_mark:                     | :heavy_check_mark: Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
 | `tidyr::replace_na()` | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
+| `ggplot2::fortify()`  | ✔️ to sf via `sf::st_as_sf()`          |                                                                                                                |
 | `ggplot2::geom_*()`   | :heavy_check_mark: `geom_spatvector()` | :heavy_check_mark: `geom_spatraster()` and `geom_spatraster_rgb()`.                                            |
 
 ## :exclamation: A note on performance
@@ -174,9 +175,9 @@ f_vect <- system.file("extdata/cyl.gpkg", package = "tidyterra")
 
 prov <- vect(f_vect)
 
-ggplot() +
+ggplot(prov) +
   geom_spatraster(data = variation) +
-  geom_spatvector(data = prov, fill = NA) +
+  geom_spatvector(fill = NA) +
   scale_fill_whitebox_c(
     palette = "deep", direction = -1,
     labels = scales::label_number(suffix = "º")
@@ -199,17 +200,16 @@ f_tile <- system.file("extdata/cyl_tile.tif", package = "tidyterra")
 rgb_tile <- rast(f_tile)
 
 
-ggplot() +
+plot <- ggplot(prov) +
   geom_spatraster_rgb(data = rgb_tile) +
-  geom_spatvector(data = prov, fill = NA) +
+  geom_spatvector(fill = NA) +
   theme_light()
 
-# Recognizes coord_sf()
 
-ggplot() +
-  geom_spatraster_rgb(data = rgb_tile) +
-  geom_spatvector(data = prov, fill = NA) +
-  theme_light() +
+plot
+
+# Recognizes coord_sf()
+plot +
   # Change crs and datum (for relabeling graticules)
   coord_sf(crs = 3035, datum = 3035)
 ```
