--- a/vignettes/articles/palettes.Rmd
+++ b/vignettes/articles/palettes.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
   comment = "#>",
   warning = FALSE,
   message = FALSE,
+  dev = "ragg_png",
   dpi = 300,
   tidy = "styler",
   out.width = "50%",
