--- a/README.Rmd
+++ b/README.Rmd
@@ -72,7 +72,7 @@ example, `as_tibble()` would return a tibble).
 Current methods and functions provided by {tidyterra} are:
 
 | tidyverse method      | SpatVector                    | SpatRaster                                                                                     |
-|------------------|------------------|--------------------------------------------|
+|-------------------|-------------------|------------------------------------------|
 | `tibble::as_tibble()` | ✔️                            | ✔️                                                                                             |
 | `dplyr::select()`     | ✔️                            | ✔️ Select layers                                                                               |
 | `dplyr::mutate()`     | ✔️                            | ✔️ Create /modify layers                                                                       |
@@ -263,7 +263,7 @@ A BibTeX entry for LaTeX users is
 toBibtex(citation("tidyterra"))
 ```
 
-## Acknowledgements
+## Acknowledgement
 
 {tidyterra} ggplot2 geoms are based on
 [{ggspatial}](https://github.com/paleolimbot/ggspatial) implementation, by
